# langchain-sluug-demo

./: README.md  pyproject.toml
python/: 01_plain_llm.ipynb  02_augmented_generation.ipynb  03_augmented_generation_multiple_docs.ipynb  04_retrieval_augmented_generation.ipynb  2021-02-10-SLUUG.md  2021-03-10-SLUUG.md  2021-04-14-SLUUG.md  2021-05-12-SLUUG.md  2021-06-09-SLUUG.md  2021-07-14-SLUUG.md  system_prompt.md
