[project]
name = "lang-chain-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sean Twie03", email = "sean.twie03@mail.com" }
]
dependencies = [
    "jupyterlab>=4.1.4",
    "langchain>=0.1.11",
    "langchain_community>=0.0.27",
    "beautifulsoup4>=4.12.3",
    "unstructured>=0.11.8",
    "faiss-cpu>=1.8.0",
    "jupyter-ai>=2.12.0",
    "openai>=1.14.2",
    "markdown>=3.6",
    "langchain_openai>=0.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lang_chain_demo"]
